prevent menu showing on mobile

--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -10,18 +10,18 @@
 }
 
 main, .flex-main {
-  -webkit-box-flex: 3;
-  -webkit-flex: 3;
-  flex: 3;
+  -webkit-box-flex: 2;
+  -webkit-flex: 2;
+  flex: 2;
 }
 
-.side {
+.side, #menu-wrapper {
   -webkit-box-flex: 1;
   -webkit-flex: 1;
   flex: 1;
   padding-right: 1rem;
   padding-left: 0;
-  width: 30%
+  width: 20%
 }
 
 header {
