--- a/_sass/responsive/menu.scss
+++ b/_sass/responsive/menu.scss
@@ -1,6 +1,6 @@
 #menu-wrapper {
   overflow: hidden;
-  width: 10px;
+  width: 0px;
   top: 0;
   bottom: 0;
   right: 0;
